--- a/privacy.html
+++ b/privacy.html
@@ -10,11 +10,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy | THQ Cyber Division Unincorporated</title>
   <meta name="description" content="Read how THQ Cyber Division Unincorporated protects your privacy and manages your personal information.">
-  <link rel="stylesheet" href="styles.css" />
+<!--  <link rel="stylesheet" href="styles.css" />-->
+  
   <link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
+  <style>
+    body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #000;
+            background-image: url('website_cover.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        header {
+            background-color: #000;
+            color: #fff;
+            text-align: center;
+            padding: 15px 0;
+        }
+        header img {
+            width: 100px;
+            display: block;
+            margin: 0 auto;
+        }
+        header h1 {
+            font-size: 1.5em;
+            margin: 10px 0 0;
+        }
+        nav {
+            background-color: #000;
+            padding: 10px;
+            display: flex;
+            justify-content: center;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: all 0.3s ease-in-out;
+        }
+
+        nav a:hover {
+	    background-color: rgb(65,105,225);
+            color: #000;
+            text-decoration: None;
+        }
+        main {
+            padding: 20px 15px;
+            text-align: center;
+        }
+        main h1 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        main p {
+            font-size: 1.2em;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        footer {
+            background-color: #000;
+            color: #fff;
+            text-align: center;
+            padding: 15px 10px;
+        }
+        footer img {
+            width: 30px;
+            margin: 0 5px;
+            cursor: pointer;
+        }
+        footer img:hover {
+            opacity: 0.7;
+        }
+	
+	.overlay-tile {
+	    background-color: rgba(255, 255, 255, 0.8); /* white with 80% opacity */
+	    padding: 20px;
+	    border-radius: 10px;
+	    display: inline-block;
+	    margin-top: 20px;
+	    max-width: 800px;
+	    margin-left: auto;
+	    margin-right: auto;
+	}
+  </style>
 </head>
 <body>
   <header>
+    <a href="https://thqcyberdivision.github.io/index.html">
+        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
+	     </a>
     <h1>Privacy Policy</h1>
   </header>
   <nav>
@@ -23,7 +115,7 @@
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
   </nav>
   <main class="overlay-tile">
-    <p>Effective Date: July 9th, 2025</p>
+    <p>Effective Date: July 9th, Twenty Twenty Five</p>
 
     <h2>1. Information We Collect</h2>
     <p>We collect information you voluntarily provide such as name, email, and service requests. We also collect technical data via cookies and analytics.</p>
