--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
 
 
     <header>
-        <img src="logo.png" alt="THQ Logo">
+        <a href="https://thqcyberdivision.github.io/index.html">
+        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
+	     </a>
         <h1>Welcome to THQ Cyber Division</h1>
     </header>
     <nav>
@@ -284,12 +286,11 @@
 </section>
     <footer>
         <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
-        <a href="mailto:thqcs@protonmail.com">
-            <img src="email-icon.png" alt="Email Icon" title="Send us an email">
-        </a>
-        <a href="skype:live:.cid.5de4365cebf8c90d">
-            <img src="skype-icon.png" alt="Skype Icon" title="Chat with us on Skype">
-        </a>
+        <nav>
+	    <a href="terms.html">Terms of Use</a> |
+	    <a href="privacy.html">Privacy Policy</a> |
+	    <a href="mailto:thqcs@protonmail.com">Email Us</a>
+	  </nav>
     </footer>
 
 </body>
