--- a/about.html
+++ b/about.html
@@ -213,6 +213,7 @@
 </head>
 <body>
     <header>
+	    
 	     <a href="https://thqcyberdivision.github.io/index.html">
         <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
 	     </a>
@@ -242,12 +243,11 @@
     </main>
     <footer>
         <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
-        <a href="mailto:thqcs@protonmail.com">
-            <img src="https://thqcyberdivision.github.io/email-icon.png" alt="Email Icon" title="Send us an email">
-        </a>
-        <a href="skype:live:.cid.5de4365cebf8c90d">
-            <img src="https://thqcyberdivision.github.io/skype-icon.png" alt="Skype Icon" title="Chat with us on Skype">
-        </a>
+        <nav>
+	    <a href="terms.html">Terms of Use</a> |
+	    <a href="privacy.html">Privacy Policy</a> |
+	    <a href="mailto:thqcs@protonmail.com">Email Us</a>
+	</nav>
     </footer>
 </body>
 </html>
