--- a/terms.html
+++ b/terms.html
@@ -95,7 +95,8 @@
 	    background-color: rgba(255, 255, 255, 0.8); /* white with 80% opacity */
 	    padding: 20px;
 	    border-radius: 10px;
-	    display: inline-block;
+	    display: block;
+	    margin: 20px auto;
 	    margin-top: 20px;
 	    max-width: 800px;
 	    margin-left: auto;
