--- a/privacy.html
+++ b/privacy.html
@@ -94,9 +94,10 @@
 	    background-color: rgba(255, 255, 255, 0.8); /* white with 80% opacity */
 	    padding: 20px;
 	    border-radius: 10px;
-	    display: inline-block;
+	    display: block;
 	    margin-top: 20px;
 	    max-width: 800px;
+	    margin: 20px auto;
 	    margin-left: auto;
 	    margin-right: auto;
 	}
