--- a/services.html
+++ b/services.html
@@ -60,120 +60,150 @@
       gtag('js', new Date());
       gtag('config', 'G-T83TYG9SG6');
     </script>
-
+          <!-- Snipcart -->
+      <link rel="preconnect" href="https://app.snipcart.com" />
+      <link rel="preconnect" href="https://cdn.snipcart.com" />
+      <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.3.0/default/snipcart.css" />
+      <script async src="https://cdn.snipcart.com/themes/v3.3.0/default/snipcart.js"></script>
+      <div hidden id="snipcart" data-api-key="YOUR_PUBLIC_API_KEY"></div>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            color: #000;
-            background-image: url('website_cover.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-        header {
-            background-color: #000;
-            color: #fff;
-            text-align: center;
-            padding: 15px 0;
-        }
-        header img {
-            width: 100px;
-            display: block;
-            margin: 0 auto;
-        }
-        header h1 {
-            font-size: 1.5em;
-            margin: 10px 0 0;
-        }
-        nav {
-            background-color: #000;
-            padding: 10px;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: all 0.3s ease-in-out;
-        }
-        nav a:hover {
-            background-color: rgb(65,105,225);
-            color: #000;
-        }
-        main {
-            padding: 20px 15px;
-            text-align: center;
-        }
-        main h1 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-        main ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        main li {
-            font-size: 1.2em;
-            margin: 10px 0;
-        }
-        footer {
-            background-color: #000;
-            color: #fff;
-            text-align: center;
-            padding: 15px 10px;
-        }
-        footer img {
-            width: 30px;
-            margin: 0 5px;
-            cursor: pointer;
-        }
-        footer img:hover {
-            opacity: 0.7;
-        }
-        .overlay-tile {
-            background-color: rgba(255, 255, 255, 0.88);
-            padding: 20px;
-            border-radius: 10px;
-            display: inline-block;
-            margin-top: 20px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-            box-shadow: 0 0 20px rgba(0,0,0,0.08);
-        }
-        /* Responsive styles for mobile */
-        @media (max-width: 600px) {
-            .overlay-tile {
-                max-width: 98vw;
-                padding: 10px;
-            }
-            header h1, main h1 {
-                font-size: 1.1em;
-            }
-            nav {
-                flex-direction: column;
-                align-items: center;
-                padding: 5px;
-            }
-            nav a {
-                margin: 4px 0;
-                font-size: 1em;
-                padding: 8px 10px;
-            }
-            body {
-                background-size: cover;
-                background-position: center;
-            }
-        }
-    </style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4 url('website_cover.jpg') no-repeat center center / cover;
+      color: #000;
+    }
+
+    header {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 15px 0;
+    }
+
+    header img {
+      width: 100px;
+      display: block;
+      margin: 0 auto;
+    }
+
+    header h1 {
+      font-size: 1.5em;
+      margin: 10px 0 0;
+    }
+
+    nav {
+      background-color: #000;
+      padding: 10px;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    nav a {
+      color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 10px 20px;
+      border-radius: 5px;
+      transition: all 0.3s ease-in-out;
+    }
+
+    nav a:hover {
+      background-color: royalblue;
+      color: #000;
+    }
+
+    main {
+      padding: 20px 15px;
+      text-align: center;
+    }
+
+    .overlay-tile {
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 25px;
+      border-radius: 10px;
+      max-width: 1200px;
+      margin: 30px auto;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
+    }
+
+    .catalog {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .catalog-item {
+      background-color: #fff;
+      border-radius: 12px;
+      padding: 15px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
+      text-align: center;
+      transition: transform 0.2s ease;
+    }
+
+    .catalog-item:hover {
+      transform: translateY(-4px);
+    }
+
+    .catalog-item img {
+      max-width: 100%;
+      height: 150px;
+      object-fit: contain;
+      margin-bottom: 10px;
+    }
+
+    .catalog-item h3 {
+      font-size: 1.2em;
+      margin: 10px 0 5px;
+    }
+
+    .catalog-item p {
+      font-size: 0.95em;
+      margin: 5px 0 15px;
+      color: #333;
+    }
+
+    .catalog-item button {
+      background-color: #4169e1;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .catalog-item button:hover {
+      background-color: #365ac0;
+    }
+
+    footer {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 15px 10px;
+    }
+
+    @media (max-width: 600px) {
+      .overlay-tile {
+        padding: 15px;
+        margin: 15px;
+      }
+
+      nav {
+        flex-direction: column;
+      }
+
+      nav a {
+        margin: 5px 0;
+      }
+    }
+  </style>
     <link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
@@ -188,48 +218,154 @@
     </script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-    <header>
-        <a href="https://thqcyberdivision.github.io/index.html">
-            <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
-        </a>
-        <h1>Our Virtual Assistant Services</h1>
-    </header>
-    <nav>
-        <a href="https://thqcyberdivision.github.io/index.html">Home</a>
-        <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
-        <a href="https://thqcyberdivision.github.io/services.html">Services</a>
-    </nav>
-    <main>
-        <div class="overlay-tile">
-            <h1>Explore Our Expertise</h1>
-            <p>At THQ Cyber Division Unincorporated, we offer a range of virtual assistant services designed to support your business and personal needs. Our services include:</p>
-            <ul>
-                <li><strong>Business Analysis:</strong> In-depth analysis of your business to help streamline processes and improve efficiency.</li>
-                <li><strong>Document Writing:</strong> Professional writing services for documents, reports, and articles.</li>
-                <li><strong>Proofreading:</strong> Meticulous proofreading to ensure error-free documents.</li>
-                <li><strong>Data Entry:</strong> Accurate and efficient data entry services to help you manage your data.</li>
-                <li><strong>Research:</strong> Research services to provide valuable insights and information.</li>
-                <li><strong>Calendar Organization:</strong> Calendar organization services to ensure you're always on schedule.</li>
-                <li><strong>Email Management:</strong> Effective email management to help you stay organized.</li>
-                <li><strong>Remote Support:</strong> Expert technical support at your convenience, wherever you are.</li>
-            </ul>
-            <h1>Benefits of Our Services</h1>
-            <p>
-                - <strong>Increased Productivity</strong>: By outsourcing tasks to us, you can focus on high-priority projects and activities.<br>
-                - <strong>Improved Accuracy</strong>: Our attention to detail ensures high-quality work, reducing errors and stress.<br>
-                - <strong>Flexibility</strong>: Our virtual assistant services are available on-demand, allowing you to work at your own pace.
-            </p>
-            <br/>
-           
+<body>
+
+  <header>
+    <a href="index.html">
+      <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
+    </a>
+    <h1>Our Virtual Assistant Services</h1>
+  </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="services.html">Services</a>
+  </nav>
+
+  <main>
+    <div class="overlay-tile">
+      <h2>Explore Our Digital Services & Products</h2>
+      <p>Purchase virtual assistant services and eBooks securely using Snipcart.</p>
+
+      <div class="catalog">
+
+        <!-- Business Analysis -->
+        <div class="catalog-item">
+          <img src="https://cdn-icons-png.flaticon.com/512/3105/3105898.png" alt="Business Analysis">
+          <h3>Business Analysis</h3>
+          <p>Optimize your business processes with our expert analysis.</p>
+          <p><strong>$49.99</strong></p>
+          <button class="snipcart-add-item"
+            data-item-id="business-analysis"
+            data-item-name="Business Analysis"
+            data-item-price="49.99"
+            data-item-url="https://thqcyberdivision.github.io/services.html"
+            data-item-description="Comprehensive business analysis for increased productivity.">
+            Purchase
+          </button>
         </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
-        <nav>
-            <a href="terms.html">Terms of Use</a> |
-            <a href="privacy.html">Privacy Policy</a> |
-            <a href="mailto:thqcs@protonmail.com">Email Us</a>
-          </nav>
-    </footer>
+
+        <!-- Document Writing -->
+        <div class="catalog-item">
+          <img src="https://cdn-icons-png.flaticon.com/512/281/281760.png" alt="Document Writing">
+          <h3>Document Writing</h3>
+          <p>Professional document writing for reports, proposals, and more.</p>
+          <p><strong>$29.99</strong></p>
+          <button class="snipcart-add-item"
+            data-item-id="document-writing"
+            data-item-name="Document Writing"
+            data-item-price="29.99"
+            data-item-url="https://thqcyberdivision.github.io/services.html"
+            data-item-description="Professional business document preparation.">
+            Purchase
+          </button>
+        </div>
+
+        <!-- Proofreading -->
+        <div class="catalog-item">
+          <img src="https://cdn-icons-png.flaticon.com/512/2659/2659360.png" alt="Proofreading">
+          <h3>Proofreading</h3>
+          <p>Ensure your documents are clean, clear, and professional.</p>
+          <p><strong>$19.99</strong></p>
+          <button class="snipcart-add-item"
+            data-item-id="proofreading"
+            data-item-name="Proofreading"
+            data-item-price="19.99"
+            data-item-url="https://thqcyberdivision.github.io/services.html"
+            data-item-description="In-depth proofreading for spelling, grammar, and clarity.">
+            Purchase
+          </button>
+        </div>
+
+        <!-- Data Entry -->
+        <div class="catalog-item">
+          <img src="https://cdn-icons-png.flaticon.com/512/1828/1828919.png" alt="Data Entry">
+          <h3>Data Entry</h3>
+          <p>Fast, accurate entry into spreadsheets, CRMs, and systems.</p>
+          <p><strong>$24.99</strong></p>
+          <button class="snipcart-add-item"
+            data-item-id="data-entry"
+            data-item-name="Data Entry"
+            data-item-price="24.99"
+            data-item-url="https://thqcyberdivision.github.io/services.html"
+            data-item-description="Digital or manual data entry for business systems.">
+            Purchase
+          </button>
+        </div>
+
+        <!-- Research -->
+        <div class="catalog-item">
+          <img src="https://cdn-icons-png.flaticon.com/512/3062/3062634.png" alt="Research">
+          <h3>Research Services</h3>
+          <p>Thorough research reports with references for your needs.</p>
+          <p><strong>$34.99</strong></p>
+          <button class="snipcart-add-item"
+            data-item-id="research"
+            data-item-name="Research Services"
+            data-item-price="34.99"
+            data-item-url="https://thqcyberdivision.github.io/services.html"
+            data-item-description="Targeted research, summarized with citations.">
+            Purchase
+          </button>
+        </div>
+
+        <!-- Remote IT Support -->
+        <div class="catalog-item">
+          <img src="https://cdn-icons-png.flaticon.com/512/190/190411.png" alt="Remote IT Support">
+          <h3>Remote IT Support</h3>
+          <p>Get expert help for your tech issues, wherever you are.</p>
+          <p><strong>$39.99</strong></p>
+          <button class="snipcart-add-item"
+            data-item-id="remote-it"
+            data-item-name="Remote IT Support"
+            data-item-price="39.99"
+            data-item-url="https://thqcyberdivision.github.io/services.html"
+            data-item-description="Tech troubleshooting, setup help, and remote maintenance.">
+            Purchase
+          </button>
+        </div>
+
+        <!-- Productivity eBook -->
+        <div class="catalog-item">
+          <img src="https://cdn-icons-png.flaticon.com/512/3515/3515784.png" alt="Productivity eBook">
+          <h3>Productivity eBook</h3>
+          <p>Master your focus with our digital productivity guide.</p>
+          <p><strong>$9.99</strong></p>
+          <button class="snipcart-add-item"
+            data-item-id="productivity-ebook"
+            data-item-name="Productivity eBook"
+            data-item-price="9.99"
+            data-item-url="https://thqcyberdivision.github.io/services.html"
+            data-item-description="Productivity tips from THQ — available in PDF or EPUB."
+            data-item-custom1-name="Format"
+            data-item-custom1-options="PDF|EPUB"
+            data-item-custom1-required="true">
+            Buy eBook
+          </button>
+        </div>
+
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated</p>
+    <nav>
+      <a href="terms.html">Terms</a> |
+      <a href="privacy.html">Privacy</a> |
+      <a href="mailto:thqcs@protonmail.com">Contact</a>
+    </nav>
+  </footer>
 </body>
 </html>
